fixed position mobile menu

--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -45,7 +45,7 @@
   &__mobile-menu {
     position: absolute;
     z-index: 10;
-    top: 10%;
+    top: 15%;
     left: 50%;
     transform: translateX(-50%);
     background-color: white;
